--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "ngx-cookie-service": "^2.2.0",
     "path": "^0.12.7",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.4",
