--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/jquery/dist/jquery.min.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
@@ -84,7 +84,7 @@
               "node_modules/primeng/resources/primeng.min.css",
               "src/styles.less"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/jquery/dist/jquery.min.js"],
             "assets": [
               "src/assets"
             ]
