--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "ngx-cookie-service": "^2.2.0",
     "path": "^0.12.7",
     "primeicons": "^2.0.0",
@@ -40,6 +41,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "enhanced-resolve": "^3.3.0",
